bubba-frontend (2.1.17) vincent hugo; urgency=low

  * Fixed formatting of update notifications.

 -- PA Nilsson <pa@excito.com>  Tue, 02 Nov 2010 11:41:16 +0100

bubba-frontend (2.1.16) vincent hugo; urgency=low

  * Modified help texts. 

 -- PA Nilsson <pa@excito.com>  Tue, 02 Nov 2010 09:43:14 +0100

bubba-frontend (2.1.15) vincent hugo; urgency=low

  * Add json return value for lan settings 

 -- Tor Krill <tor@excito.com>  Wed, 27 Oct 2010 12:14:41 +0200

bubba-frontend (2.1.14) lucid; urgency=low

  * Fixed default language to show correct lang when no default is set. (Closes: #1596) 

 -- PA Nilsson <pa@excito.com>  Tue, 26 Oct 2010 14:28:09 +0200

bubba-frontend (2.1.13) vincent hugo; urgency=low

  * Use utf8 charset by default on ntfs and vfat mounts 

 -- Tor Krill <tor@excito.com>  Mon, 25 Oct 2010 16:05:00 +0200

bubba-frontend (2.1.12) lucid; urgency=low

  * Extended php timeout to 5min for backup/restore settings. (Closes: #1597) 
  * Fixed error message when failure to remove user account. (Closes: 1553)

 -- PA Nilsson <pa@excito.com>  Fri, 22 Oct 2010 13:52:13 +0200

bubba-frontend (2.1.11) vincent hugo; urgency=low

  * Fixed wizard to auto start in with language selection. (Closes: #1573)
  * Fixed php error in easyfind section of wizard. (Closes: #1575) 
  * Removed debug print (Closes: #1577) 
  * Fixed wrong tooltip for english "download" button. (Closes: #1574) 
  * Added german texts. 
  * More texts. (Closes: #1578) 
  * Removed language choice for admin (Closes: #1576,1582) 
  * Fixed language choice for non-admin users. 

 -- PA Nilsson <pa@excito.com>  Fri, 22 Oct 2010 12:04:53 +0200

bubba-frontend (2.1.10) lucid; urgency=low

  * Updated some german help texts 

 -- PA Nilsson <pa@excito.com>  Thu, 14 Oct 2010 10:46:37 +0200

bubba-frontend (2.1.9) vincent hugo; urgency=low

  * Update for easyfind server error message

 -- PA Nilsson <pa@excito.com>  Wed, 06 Oct 2010 12:14:13 +0200

bubba-frontend (2.1.8) vincent hugo; urgency=low